--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -241,5 +241,10 @@
     <string name="send_link_for_online_payment_break">Send Link For \nOnline Payment</string>
     <string name="visit_npa_payment_mode">Visit - NPA Payment Mode</string>
     <string name="not_visited_the_customer">Not Visited The Customer</string>
+    <string name="please_enter_cheque_date">Please Enter Cheque Date</string>
+    <string name="please_enter_cheque_no">Please Enter Cheque No.</string>
+    <string name="please_enter_bank_name">Please Enter Bank Name</string>
+    <string name="please_enter_ifsc_code">Please Enter IFSC Code</string>
+    <string name="generate_receipt">Generate Receipt</string>
 
 </resources>
