In Visit_NPA_StatusActivity , on clicking Not Ready To Pay-> Visit_NPA_NotificationActivity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -246,5 +246,8 @@
     <string name="please_enter_bank_name">Please Enter Bank Name</string>
     <string name="please_enter_ifsc_code">Please Enter IFSC Code</string>
     <string name="generate_receipt">Generate Receipt</string>
+    <string name="visit_npa_notification">Visit - NPA Notification</string>
+    <string name="lack_of_funds">Lack Of Funds</string>
+    <string name="claims_payment_made">Claims Payment Made</string>
 
 </resources>
