--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -56,6 +56,7 @@
     <string name="edit">Edit</string>
     <string name="saved_in_room_db">Successfully Saved in Room DB</string>
     <string name="back_to_lead_list">Back To Lead List</string>
+    <string name="back_to_lead_list_space">\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0Back To Lead List\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0</string>
     <string name="permission_to_call_denied">Permission to make a call is denied</string>
     <string name="something_went_wrong">Something Went Wrong</string>
     <string name="lead_number_already_exists">Lead Number Already Exists</string>
@@ -191,6 +192,7 @@
     <string name="source_of_lead">Source of Lead</string>
     <string name="sir_madam">Sir/Madam,are you interested in any loan such as personal loan, home loan etc?</string>
     <string name="view_products">View Products</string>
+    <string name="view_products_space">\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0View Products\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0</string>
     <string name="yes_the_lead_nis_interested">Yes, the lead \nis interested</string>
     <string name="no_the_lead_nis_not_interested">No the lead \nis not interested</string>
     <string name="which_products_are_you_interested_in">Which products are you interested in?</string>
@@ -265,5 +267,6 @@
     <string name="pre_approved_offer">Pre Approved Offers!</string>
     <string name="there_are_no_pre_approved_offers">There are no pre-approved offers</string>
     <string name="pdf_receipt">PDF - Receipt</string>
+    <string name="call_status_view_products">Call Status - View Products</string>
 
 </resources>
