OffersListActivity, activity_offers_list.xml added, CallStatusActivity, CallStatusWithProductsActivity changes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -275,5 +275,6 @@
     <string name="product_interest_status">Product Interest Status</string>
     <string name="is_interested">Is Interested</string>
     <string name="not_interested">Not Interested</string>
+    <string name="view_other_offers">View Other Offers</string>
 
 </resources>
