--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -265,7 +265,8 @@
     <string name="others_space2">\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0Others\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0</string>
     <string name="credit_card">Credit Card</string>
     <string name="personal_loan">Personal Loan</string>
-    <string name="pre_approved_offer">Pre Approved Offers!</string>
+    <string name="pre_approved_offer_break">Pre Approved \nOffers!</string>
+    <string name="pre_approved_offers">Pre Approved Offers!</string>
     <string name="there_are_no_pre_approved_offers">There are no pre-approved offers</string>
     <string name="pdf_receipt">PDF - Receipt</string>
     <string name="call_status_view_products">Call Status - View Products</string>
@@ -276,5 +277,6 @@
     <string name="is_interested">Is Interested</string>
     <string name="not_interested">Not Interested</string>
     <string name="view_other_offers">View Other Offers</string>
+    <string name="view_other_offers_break">View Other \nOffers</string>
 
 </resources>
