displaying distance in Km between lodha xperia mall and user's device location in DetailsOfCustomerAdapter in Village label beside value of village but maps api and other related api not enabled Of Office Google cloud console

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -295,5 +295,6 @@
     <string name="months">Months</string>
     <string name="roi">ROI</string>
     <string name="check_eligibility">Check Eligibility</string>
+    <string name="location_not_found">Location not found</string>
 
 </resources>
