--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -296,5 +296,8 @@
     <string name="roi">ROI</string>
     <string name="check_eligibility">Check Eligibility</string>
     <string name="location_not_found">Location not found</string>
+    <string name="age_monthly_income_other_emi_cannot_be_empty">Age, Monthly Income, Emi fields cannot be empty</string>
+    <string name="lead_is_eligible">Lead is Eligible</string>
+    <string name="lead_is_not_eligible">Lead is not Eligible</string>
 
 </resources>
