--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -299,6 +299,9 @@
     <string name="age_monthly_income_other_emi_cannot_be_empty">Age, Monthly Income, Emi fields cannot be empty</string>
     <string name="lead_is_eligible">Lead is Eligible</string>
     <string name="lead_is_not_eligible">Lead is not Eligible</string>
+    <string name="eligibility_details">Eligibility Details</string>
+    <string name="calculate_emi">Calculate EMI</string>
+    <string name="pls_fill_required_fields">Please fill required fields</string>
 
     <!--for Tenure-->
     <string-array name="tenure_array">
