ViewProductsActivity Interested and eligible button navigate to LeadsActivity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -305,14 +305,8 @@
 
     <!--for Tenure-->
     <string-array name="tenure_array">
-        <item>1 Month</item>
-        <item>2 Months</item>
-        <item>3 Months</item>
-        <item>6 Months</item>
-        <item>1 Year</item>
-        <item>2 Years</item>
-        <item>3 Years</item>
-        <item>5 Years</item>
+        <item>Months</item>
+        <item>Years</item>
     </string-array>
 
 
