--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -303,6 +303,7 @@
     <string name="calculate_emi">Calculate EMI</string>
     <string name="pls_fill_required_fields">Please fill required fields</string>
     <string name="please_enter_amount">Please Enter Amount</string>
+    <string name="view">View</string>
 
     <!--for Tenure-->
     <string-array name="tenure_array">
