NearByCustomersActivity, on clicking Back To Member List button redirect to the Selected List using DPD_row_positon

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -305,11 +305,12 @@
     <string name="please_enter_amount">Please Enter Amount</string>
     <string name="view">View</string>
     <string name="search_member">Search Member</string>
+    <string name="search">Search</string>
     <string name="status_">Status</string>
     <string name="search_by_name">Search By Name</string>
     <string name="search_by_location">Search By Location</string>
     <string name="search_by_status">Search By Status</string>
-
+    <string name="back_to_member_list">Back To Member List</string>
 
 
     <!--for Tenure-->
