Schedule for the Day in DashBoard Api Success

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -323,6 +323,7 @@
     <string name="capture_details">Capture Details</string>
     <string name="date_of_visit_promised">Date Of Visit Promised</string>
     <string name="fo_name">FO Name</string>
+    <string name="in_process">In-Process</string>
 
 
     <!--for Tenure-->
