--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -66,6 +66,7 @@
     <!--validations-->
     <string name="user_id_cannot_be_empty">User ID cannot be empty</string>
     <string name="password_cannot_be_empty">Password cannot be empty</string>
+    <string name="user_name_cannot_be_empty">UserName cannot be empty</string>
     <string name="password_not_valid">Password not valid</string>
     <string name="password_not_matching">Password not matching</string>
     <string name="enter_valid_otp">Enter valid OTP</string>
@@ -324,6 +325,11 @@
     <string name="date_of_visit_promised">Date Of Visit Promised</string>
     <string name="fo_name">FO Name</string>
     <string name="in_process">In-Process</string>
+    <string name="enter_user_name">Enter User Name</string>
+    <string name="logout">Logout</string>
+    <string name="are_you_sure">Are you sure?</string>
+    <string name="yes">Yes</string>
+    <string name="no">No</string>
 
 
     <!--for Tenure-->
