--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -334,6 +334,7 @@
     <string name="enter_your_password">Enter your Password</string>
     <string name="login_with_mpin">Login With MPin</string>
     <string name="visits_for_the_day">Visits For The Day</string>
+    <string name="status_of_customer">Status Of Customer</string>
 
 
     <!--for Tenure-->
