--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -338,6 +338,7 @@
     <string name="calling_npa_customer_details">Calling - NPA Customer Details</string>
     <string name="customer_response">Customer Response</string>
     <string name="search_by_date_range">Search By Date Range</string>
+    <string name="clear_all">Clear All</string>
 
 
     <!--for Tenure-->
