--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -339,6 +339,7 @@
     <string name="customer_response">Customer Response</string>
     <string name="search_by_date_range">Search By Date Range</string>
     <string name="clear_all">Clear All</string>
+    <string name="in_process_calls">In Process\n\u0020\u0020\u0020\u0020\u0020Calls</string>
 
 
     <!--for Tenure-->
