CustomerDetailsActivity - on clicking individual item in VisitsForTheDayAdapter , this Activity is called . Before Generating Receipt , Amount is entered or not is checked in Visit_NPA_PaymentModeActivity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -340,6 +340,7 @@
     <string name="search_by_date_range">Search By Date Range</string>
     <string name="clear_all">Clear All</string>
     <string name="in_process_calls">In Process\n\u0020\u0020\u0020\u0020\u0020Calls</string>
+    <string name="amount_paid_is_empty">Amount Paid is empty</string>
 
 
     <!--for Tenure-->
