activity_visit_npa_notification.xml , added new button Will Pay LumpSump , and navigated 5 buttons - Lack of funds, Not Taken loan , Loan Taken By Relative , Will Pay LumpSump , Others to SubmitCompletionActivityOfCustomer

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -198,7 +198,7 @@
     <string name="yes_the_lead_nis_interested">Yes, the lead \nis interested</string>
     <string name="no_the_lead_nis_not_interested">No the lead \nis not interested</string>
     <string name="which_products_are_you_interested_in">Which products are you interested in?</string>
-    <string name="will_pay_lumpsum">\u00A0Will pay Lumpsum\u00A0</string>
+    <string name="will_pay_lumpsum">\u00A0Will pay LumpSump\u00A0</string>
     <string name="already_paid">Already Paid</string>
     <string name="upload">Upload</string>
     <string name="upload_file">Upload File</string>
