In ScheduleDetailsActivity (DashBoard) and StatusOfCustomerActivity(LoanCollectionAdapter on clicking status icon) customDialogSearchDate- date reset icon added , if fromDate or toDate empty then error msg will display accordingly, On clicking Clear All , Searched Date Range and Clear All text will be gone and Unfiltered result list will display

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -355,6 +355,8 @@
     <string name="full_amount_paid_status_info">Full Amount Paid</string>
     <string name="partial_Amount_paid_status_info">Partial Amount Paid</string>
     <string name="will_pay_lump_sump_status_info">Will Pay Lump sump</string>
+    <string name="please_select_from_date">Please Select From Date</string>
+    <string name="please_select_to_date">Please Select To Date</string>
 
 
 
