Toolbar Heading Calls For The Day

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -181,6 +181,9 @@
     <string name="calls_for_the_day">Calls For The Day</string>
     <string name="calls_for_the_day_npa">Calls For The Day - NPA</string>
     <string name="calls_for_the_day_npa_details">Calls For The Day - NPA Details</string>
+    <string name="calls_for_the_day_customer_response">Calls For The Day - Customer Response</string>
+    <string name="calls_for_the_day_payment_mode">Calls For The Day - Payment Mode</string>
+    <string name="calls_for_the_day_payment_status">Calls For The Day - Payment Status</string>
     <string name="view_nearby_customers">View Nearby Customers</string>
     <string name="goto_dashboard">Go to Dashboard</string>
     <string name="schedule_details">Schedule Details</string>
