--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -362,6 +362,8 @@
     <string name="will_pay_lump_sump_status_info">Will Pay Lump sump</string>
     <string name="please_select_from_date">Please Select From Date</string>
     <string name="please_select_to_date">Please Select To Date</string>
+    <string name="mpin_is_incorrect">MPin is Incorrect</string>
+    <string name="login_successful">Login Successful</string>
 
 
 
