--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -219,7 +219,8 @@
     <string name="update">Update</string>
     <string name="calling_1_30_dpd">Calling-1 to 30 DPD</string>
     <string name="calling_31_60_dpd">Calling-31 to 60 DPD</string>
-    <string name="calling_above_60_dpd">Calling-Above 60 DPD</string>
+    <string name="calling_60_90_dpd">Calling-60 to 90 DPD</string>
+    <string name="calling_above_90">Calling above 90 DPD</string>
     <string name="member_details">Member Details</string>
     <string name="contact">Contact No.</string>
     <string name="status">Status :</string>
