--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -367,7 +367,7 @@
     <string name="mpin_is_incorrect">MPin is Incorrect</string>
     <string name="login_successful">Login Successful</string>
     <string name="mobile_no_">Mobile :</string>
-    <string name="pincode">PinCode :</string>
+    <string name="pincode">Pincode :</string>
 
 
     <!--for Tenure-->
