LoanCollectionActivity - Search By Mobile Number

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -370,6 +370,7 @@
     <string name="mobile_no_">Mobile :</string>
     <string name="pincode">Pincode :</string>
     <string name="pincode_">Pincode </string>
+    <string name="no_data_found">No Data Found </string>
 
 
     <!--for Tenure-->
