--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -375,6 +375,7 @@
     <string name="name_cannot_be_empty">Name cannot be empty  </string>
     <string name="date_cannot_be_empty">Date cannot be empty  </string>
     <string name="please_enter_all_cheque_details">Please Enter All Cheque Details  </string>
+    <string name="invalid_userID_contact_admin">Invalid UserID \nPlease Contact Admin</string>
 
 
     <!--for Tenure-->
