OTPActivity ,on clicking SignUp if MPin exists with the UserId entered then msg will display User Already Registered else Fresh Registration

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -376,6 +376,7 @@
     <string name="date_cannot_be_empty">Date cannot be empty  </string>
     <string name="please_enter_all_cheque_details">Please Enter All Cheque Details  </string>
     <string name="invalid_userID_contact_admin">Invalid UserID \nPlease Contact Admin</string>
+    <string name="user_already_registered">User Already Registered</string>
 
 
     <!--for Tenure-->
